--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-router": "^1.46.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "monaco-editor": "^0.50.0",
@@ -24,21 +26,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@tanstack/router-devtools": "^1.46.8",
+    "@tanstack/router-plugin": "^1.46.6",
     "@types/node": "^22.1.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
-    "typescript": "^4.6.4",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1",
-    "vite": "^3.0.7"
+    "vite": "^5.3.5"
   }
 }
