feat: SP-1298 Adds service to get all results filterd by matchType

--- a/example.config.json
+++ b/example.config.json
@@ -1,7 +1,8 @@
 {
   "scanoss": {
     "apiToken": "455684238",
-    "apiUrl": "https://api.scanoss.com"
+    "apiUrl": "https://api.scanoss.com",
+    "resultFilePath": ""
   }
 
 }
