feat: SP-1133 Gets config parameters from arguments

--- a/example.config.json
+++ b/example.config.json
@@ -2,7 +2,8 @@
   "scanoss": {
     "apiToken": "455684238",
     "apiUrl": "https://api.scanoss.com",
-    "resultFilePath": ""
+    "resultFilePath": "",
+    "scanRoot": "."
   }
 
 }
