feat: SP-1426 add versioning + makefile commands

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,15 +61,15 @@ jobs:
       # Build
       - name: Build App
         if: runner.os == 'macOS'
-        run: wails build --platform ${{matrix.build.platform}} --nopackage -webview2 download -o scanoss-lui-macos
+        run: wails build -ldflags "-X main.version=`git tag --sort=-version:refname | head -n 1`" --platform ${{matrix.build.platform}} --nopackage -webview2 download -o scanoss-lui-macos
         shell: bash
       - name: Build Linux App
         if: runner.os == 'Linux'
-        run: wails build --platform ${{matrix.build.platform}} -webview2 download -o scanoss-lui-linux
+        run: wails build -ldflags "-X main.version=`git tag --sort=-version:refname | head -n 1`" --platform ${{matrix.build.platform}} -webview2 download -o scanoss-lui-linux
         shell: bash
       - name: Build Windows App
         if: runner.os == 'Windows'
-        run: wails build --platform ${{matrix.build.platform}} -webview2 download -o scanoss-lui-windows.exe
+        run: wails build -ldflags "-X main.version=`git tag --sort=-version:refname | head -n 1`" --platform ${{matrix.build.platform}} -webview2 download -o scanoss-lui-windows.exe
         shell: bash
 
       # Set execution permissions
