--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Wails build
+name: Publish
 
 on:
   workflow_dispatch:
@@ -10,108 +10,281 @@ on:
 env:
   # Necessary for most environments as build failure can occur due to OOM issues
   NODE_OPTIONS: "--max-old-space-size=4096"
+  ARTIFACT_NAME_PREFIX: "scanoss-lui"
+  GOLANG_VERSION: "1.21"
+  NODE_VERSION: "16.x"
 
 jobs:
-  build:
-    strategy:
-      # Failure in one platform build won't impact the others
-      fail-fast: false
-      matrix:
-        build:
-          - platform: "darwin/universal"
-            os: "macos-latest"
 
-    runs-on: ${{ matrix.build.os }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+    build_mac:
+      name: Build for MacOS
+      runs-on: macos-latest
+      strategy:
+        matrix:
+          platform: [ "darwin/universal" ]
 
-      # Setup and configure GoLang
-      - name: Setup GoLang
-        uses: actions/setup-go@v4
-        with:
-          check-latest: true
-          go-version: "1.21"
-      - run: go version
-        shell: bash
-      # Setup and configure NodeJS
-      - name: Setup NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-      # Install Wails
-      - name: Install Wails
-        run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
-        shell: bash
-      - name: Install macOS Wails deps
-        if: runner.os == 'macOS'
-        run: brew install mitchellh/gon/gon
-        shell: bash
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            submodules: recursive
 
-      # Build
-      - name: Build App
-        if: runner.os == 'macOS'
-        run: |
-          mkdir build 
-          cp -r assets build/assets 
-          wails build -ldflags "-X main.version=$(git tag --sort=-version:refname | head -n 1)" --platform ${{matrix.build.platform}} --nopackage -webview2 download -o scanoss-lui-macos
-        shell: bash
+        # Setup and configure GoLang
+        - name: Setup GoLang
+          uses: actions/setup-go@v4
+          with:
+            check-latest: true
+            go-version: "1.21"
+        - run: go version
+          shell: bash
+        # Setup and configure NodeJS
+        - name: Setup NodeJS
+          uses: actions/setup-node@v3
+          with:
+            node-version: "16.x"
+        # Install Wails
+        - name: Install Wails
+          run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+          shell: bash
+        - name: Install macOS Wails deps
+          if: runner.os == 'macOS'
+          run: brew install mitchellh/gon/gon
+          shell: bash
+
+        # Build
+        - name: Build App
+          run: |
+            mkdir build
+            cp -r assets build/assets
+            wails build -ldflags "-X main.version=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal" --nopackage -webview2 download -o scanoss-lui-macos
+          shell: bash
 
 
-      # Set execution permissions
-      - name: Add macOS perms
-        if: runner.os == 'macOS'
-        run: chmod +x ./build/bin/scanoss-lui-macos
-        shell: bash
+        # Set execution permissions
+        - name: Add macOS perms
+          run: chmod +x ./build/bin/scanoss-lui-macos
+          shell: bash
 
 
-      # macOS Signing
-      - name: Import Code-Signing Certificates for macOS
-        if: runner.os == 'macOS' && startsWith(github.ref, 'refs/tags/')
-        uses: Apple-Actions/import-codesign-certs@v1
-        with:
-          keychain-password: ${{ secrets.APPLE_PASSWORD }}
-          p12-file-base64: ${{ secrets.MACOS_DEVELOPER_CERT }}
-          p12-password: ${{ secrets.MACOS_DEVELOPER_CERT_PASSWORD }}
+        # macOS Signing
+        - name: Import Code-Signing Certificates for macOS
+          if: startsWith(github.ref, 'refs/tags/')
+          uses: Apple-Actions/import-codesign-certs@v1
+          with:
+            keychain-password: ${{ secrets.APPLE_PASSWORD }}
+            p12-file-base64: ${{ secrets.MACOS_DEVELOPER_CERT }}
+            p12-password: ${{ secrets.MACOS_DEVELOPER_CERT_PASSWORD }}
 
-      - name: Sign and Notarize
-        env:
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_ID: apple@scanoss.com
-          APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
-          APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
-        run: |              
-          echo "Signing Package with App Certificate"
-          codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE"  --verbose ./build/bin/scanoss-lui-macos
-          
-          echo "Verifying Code Signature"
-          codesign --verify --verbose=4 ./build/bin/scanoss-lui-macos
-          
-          echo "Detailed Signature Information"
-          codesign -dvv ./build/bin/scanoss-lui-macos
+        - name: Sign and Notarize
+          env:
+            APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+            APPLE_ID: apple@scanoss.com
+            APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
+            APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
+          run: |
+            echo "Signing Package with App Certificate"
+            codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE"  --verbose ./build/bin/scanoss-lui-macos
 
-          echo "Checking Gatekeeper Acceptance (Before Notarization)"
-          spctl -a -vv ./build/bin/scanoss-lui-macos || echo "Gatekeeper rejection expected before notarization"
-          
-          echo "Creating zip archive"
-          ditto -c -k --sequesterRsrc --keepParent ./build/bin/scanoss-lui-macos ./build/bin/scanoss-lui-macos.zip
-          
-          echo "Submitting for Notarization"
-          xcrun notarytool submit ./build/bin/scanoss-lui-macos.zip --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD" --wait
-          
-          echo "Checking Notarization Status"
-          xcrun notarytool history --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD"
-          
-          chmod +x ./build/bin/scanoss-lui-macos
-        
-          echo "Signing and Notarization Complete"
+            echo "Verifying Code Signature"
+            codesign --verify --verbose=4 ./build/bin/scanoss-lui-macos
 
-      - name: Upload build assets
-        uses: actions/upload-artifact@v4
-        with:
-          name: Wails Build ${{runner.os}}
-          path: ./build/bin/scanoss-lui-macos.zip
+            echo "Detailed Signature Information"
+            codesign -dvv ./build/bin/scanoss-lui-macos
+
+            echo "Checking Gatekeeper Acceptance (Before Notarization)"
+            spctl -a -vv ./build/bin/scanoss-lui-macos || echo "Gatekeeper rejection expected before notarization"
+
+            echo "Creating zip archive"
+            ditto -c -k --sequesterRsrc --keepParent ./build/bin/scanoss-lui-macos ./build/bin/scanoss-lui-macos.zip
+
+            echo "Submitting for Notarization"
+            xcrun notarytool submit ./build/bin/scanoss-lui-macos.zip --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD" --wait
+
+            echo "Checking Notarization Status"
+            xcrun notarytool history --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD"
+
+            chmod +x ./build/bin/scanoss-lui-macos
+
+            echo "Signing and Notarization Complete"
+
+        - name: Upload build assets
+          uses: actions/upload-artifact@v4
+          with:
+            name: artifact_m
+            path: ./build/bin/scanoss-lui-macos.zip
 
 
+    build_linux:
+        name: Build for Linux
+        runs-on: ubuntu-20.04
+        strategy:
+          matrix:
+            platform: [ "linux/amd64" ]
+
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v4
+            with:
+              submodules: recursive
+
+          # Setup and configure GoLang
+          - name: Setup GoLang
+            uses: actions/setup-go@v4
+            with:
+              check-latest: true
+              go-version: "1.21"
+          - run: go version
+            shell: bash
+          # Setup and configure NodeJS
+          - name: Setup NodeJS
+            uses: actions/setup-node@v3
+            with:
+              node-version: "16.x"
+          # Install Wails
+          - name: Install Wails
+            run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+            shell: bash
+          - name: Install Linux Wails deps
+            run: sudo apt-get update && sudo apt-get install libgtk-3-0 libwebkit2gtk-4.0-dev gcc-aarch64-linux-gnu
+            shell: bash
+
+          - name: Build Linux App
+            run: |
+              mkdir build
+              cp -r assets build/assets
+              wails build -ldflags "-X main.version=$(git tag --sort=-version:refname | head -n 1)" --platform "linux/amd64" -webview2 download -o scanoss-lui-linux
+            shell: bash
+
+          - name: Add Linux perms
+            run: chmod +x ./build/bin/scanoss-lui-linux
+            shell: bash
+
+          - name: Build Linux zip file
+            shell: bash
+            run: |
+              cd ./build/bin/ && zip scanoss-lui-linux.zip scanoss-lui-linux
+
+        # Upload build assets
+          - uses: actions/upload-artifact@v4
+            with:
+              name: artifact_l
+              path: |
+                */bin/*.zip
+                *\bin\*.zip
+
+    build_w:
+      name: Build for Windows
+      runs-on: windows-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            submodules: recursive
+
+        # Setup and configure GoLang
+        - name: Setup GoLang
+          uses: actions/setup-go@v4
+          with:
+            check-latest: true
+            go-version: ${{ env.GOLANG_VERSION }}
+        - run: go version
+          shell: bash
+        # Setup and configure Node JS
+        - name: Setup NodeJS
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ env.NODE_VERSION }}
+        # Install Wails
+        - name: Install Wails
+          run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+          shell: bash
+          # Build
+        - name: Build Windows App
+          run: |
+            mkdir build
+            cp -r assets build/assets
+            wails build -ldflags "-X main.version=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o ${{env.ARTIFACT_NAME_PREFIX}}-windows.exe
+          shell: bash
+
+        - uses: actions/upload-artifact@v4
+          with:
+            name: artifact_w_unsigned
+            path: |
+              build/bin/${{ env.ARTIFACT_NAME_PREFIX }}*.exe            
+                
+                
+
+    build_w_sign:
+      name: "Sign with CodeSignTool"
+      needs: [build_w]
+      runs-on: ubuntu-latest
+      steps:
+
+        - name: Download artifact W unsigned
+          uses: actions/download-artifact@v4
+          with:
+            name: artifact_w_unsigned
+
+          #This stage locates the unsigned .exe binary and move to win_unsigned folder.
+          #CodeSignTool does not support reading and writting into the same filepath
+        - name: Find Windows Artifact Path
+          id: win-path-artifact
+          run: |
+            export WIN_BINARY_FILEPATH=$(ls ${{ env.ARTIFACT_NAME_PREFIX }}*.exe)
+            mkdir win_unsigned
+            mv "$WIN_BINARY_FILEPATH" win_unsigned/
+            echo "ARTIFACT_WIN_PATH=win_unsigned/$WIN_BINARY_FILEPATH" >> "$GITHUB_OUTPUT"
+
+        - name: Sign Windows Artifact with CodeSignTool
+          uses: sslcom/esigner-codesign@develop
+          env:
+            ARTIFACT_WIN_PATH: ${{ steps.win-path-artifact.outputs.ARTIFACT_WIN_PATH }}
+          with:
+            command: sign
+            username: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_USERNAME}}
+            password: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_PASSWORD}}
+            credential_id: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_CREDENTIAL_ID}}
+            totp_secret: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_TOTP_SECRET}}
+            file_path:  ${GITHUB_WORKSPACE}/${{ env.ARTIFACT_WIN_PATH }}
+            output_path:  ${GITHUB_WORKSPACE}
+
+        - name: zip file
+          shell: bash
+          run: |
+            export WIN_BINARY_FILEPATH=$(ls ${{ env.ARTIFACT_NAME_PREFIX }}*.exe)
+            zip scanoss-lui-win.zip $WIN_BINARY_FILEPATH    
+
+        - uses: actions/upload-artifact@v4
+          with:
+            name: artifact_w
+            path: |
+              scanoss-lui-win.zip
+    
+
+    create_release:
+      needs: [ build_w_sign, build_mac, build_linux ]
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Download artifact W
+          uses: actions/download-artifact@v4
+          with:
+            name: artifact_w
+
+        - name: Download artifact M
+          uses: actions/download-artifact@v4
+          with:
+            name: artifact_m
+
+        - name: Download artifact L
+          uses: actions/download-artifact@v4
+          with:
+            name: artifact_l
+
+        - name: Release
+          uses: softprops/action-gh-release@v2
+          if: startsWith(github.ref, 'refs/tags/')
+          with:
+            files: |
+              */bin/*.zip
+            prerelease: true
