--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,13 @@ jobs:
             go-version: ${{ env.GOLANG_VERSION }}
         - run: go version
           shell: bash
+
         # Setup and configure NodeJS
         - name: Setup NodeJS
-          uses: actions/setup-node@v3
+          uses: actions/setup-node@v4
           with:
             node-version: ${{ env.NODE_VERSION }}
+
         # Install Wails
         - name: Install Wails
           run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
@@ -67,7 +69,7 @@ jobs:
         # macOS Signing
         - name: Import Code-Signing Certificates for macOS
           if: startsWith(github.ref, 'refs/tags/')
-          uses: Apple-Actions/import-codesign-certs@v1
+          uses: Apple-Actions/import-codesign-certs@v3
           with:
             keychain-password: ${{ secrets.APPLE_PASSWORD }}
             p12-file-base64: ${{ secrets.MACOS_DEVELOPER_CERT }}
@@ -132,7 +134,7 @@ jobs:
             shell: bash
           # Setup and configure NodeJS
           - name: Setup NodeJS
-            uses: actions/setup-node@v3
+            uses: actions/setup-node@v4
             with:
               node-version: ${{ env.NODE_VERSION }}
 
@@ -191,7 +193,7 @@ jobs:
 
         # Setup and configure Node JS
         - name: Setup NodeJS
-          uses: actions/setup-node@v3
+          uses: actions/setup-node@v4
           with:
             node-version: ${{ env.NODE_VERSION }}
 
@@ -293,4 +295,4 @@ jobs:
                               --repo ${{ github.server_url }}/${{ github.repository }} \
                               --generate-notes \
                               --draft \
-                              $(ls build/bin/*.zip)    
+                              $(ls *.zip)    
