--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-hotkeys-hook": "^4.5.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
