--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.3.2"
   },
@@ -50,6 +51,7 @@
     "@types/node": "^22.1.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
